--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@media screen and (max-width: 768px) {
-    #optimized, footer {
-        display: none!important;
-    }
-}
-@media screen and (min-width: 768px) {
-    #unoptimized{
-        display: none!important;
-    }
-}
+
 table {
     table-layout: fixed!important;
     width: 100%!important; 
@@ -18,4 +9,17 @@ table {
 
 table td {
     width: 100px!important; 
+}
+
+table td span {
+    color: #f59e0b!important;
+}
+
+hr {
+    border-width: 0.1rem!important;
+    border-color: #cccccc!important;
+    width: 75%!important;
+    margin-left: auto!important;
+    margin-right: auto!important;
+    margin-top: 2rem!important;
 }
